@@ -88,7 +88,7 @@
 
 * Suite des patchs de Frédéric Bour.
     API d'inspection complète.
-      Exposer le nombre d'états (pour la mémoisation) et une conversion état -> entier.
+      Exposer le nombre d'états (pour la mémoisation).
       Idem pour les productions.
       Fonctions d'affichage pour les types terminal, nonterminal, etc.?
       Fonctions d'isomorphisme entre token et 'a terminal * 'a?
