@@ -2149,6 +2149,14 @@ The index \verb+'a+ is the type of the semantic values associated with $A$.
 The role played by \verb+'a+ is clarified in the definition of the
 type \verb+element+, which follows.
 
+%% val number
+
+\begin{verbatim}
+  val number: _ lr1state -> int
+\end{verbatim}
+
+The states of the LR(1) automaton are numbered (from 0 and up).
+
 %% type element
 
 \begin{verbatim}
