@@ -4,6 +4,7 @@ A [supplier] is a function that produces tokens on demand.
 [lexer_lexbuf_to_supplier] turns a lexer and a lexbuf into a supplier.
 [loop] is a ready-made made main parsing loop.
 [loop_handle] is a variant of [loop] that lets the user do her own error handling.
+[number] maps a state of the LR(1) automaton to its number.
 
 2015/10/16:
 Incompatible change of the incremental API: renamed the type ['a result]
